# Lineage-Diagram-Engine

./: .gitignore  engine.py  pyproject.toml
lineage_diagram/: __init__.py  bundle.py  diagram.py  lineage.py  paths.py  segments.py  utils.py
