[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lineage_diagram"
version = "0.1.0"
description = "A library for generating lineage diagrams"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "svgpathtools",
    "numpy",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/lineage-diagram-engine"

